fix: alignment of minimal header open behaviour [#1607]

--- a/assets/scss/elements/navigation/_nav-search.scss
+++ b/assets/scss/elements/navigation/_nav-search.scss
@@ -1,3 +1,8 @@
+.hfg-item-last .menu-item-nav-search.minimal .nv-nav-search {
+  left: unset;
+  right: 0;
+}
+
 .menu-item-nav-search {
   .search-form {
 	input[type=submit] {
@@ -8,6 +13,7 @@
   }
 
   &.minimal {
+	position: relative;
 	.nv-nav-search {
 	  right: auto;
 	  left: 0;
