--- a/header-footer-grid/assets/scss/frontend/components/_search-field.scss
+++ b/header-footer-grid/assets/scss/frontend/components/_search-field.scss
@@ -1,10 +1,11 @@
-.builder-item--header_search {
+.search-field {
   line-height: 1;
   flex-grow: 1;
+
   input[type=submit]:hover {
 	background-color: transparent;
   }
-  
+
   .widget-search {
 	width: 100%;
   }
